--- a/AzureTestDevOps/Pages/Index.cshtml
+++ b/AzureTestDevOps/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Lalit Home page";
 }
 
 <div class="text-center">
